search result execution e skip save csv
